# deploy_axum_project_to_cloud_run

./: Cargo.toml  Dockerfile  build.sh  default.nix
script/gcloud/: build.sh
src/: main.rs
