[package]
name = "deploy_axum_project_to_cloud_run"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git" }
tokio = { version = "1.29.1", features = ["full"] }
